tests/sksl/errors/DuplicateSkClockwise.glsl
### Compilation failed:

error: 1: symbol 'sk_Clockwise' was already defined
InterfaceBlock { int sk_Clockwise; };
                 ^^^^^^^^^^^^^^^^^
1 error
